# PALANTIR

./: .gitignore  .pre-commit-config.yaml  Baraffe_irrad.csv  Baraffe_no_irrad.csv  Burrows.csv  DynamoRegion.py  LICENSE  Mmag_vs_Mass.ipynb  Planet.py  RC_Lynch_2010.txt  README.md  Star.py  StellarWind.py  Study_ReinChris.ipynb  Target.py  calc_tools.py  classPlanet.py  classStar.py  codemeta.json  crossmatch_mag_exo.csv  custom_dataset.csv  data_all_top100.csv  data_all_top100.txt  data_msb_mag_sorted.csv  data_msb_mag_top100.csv  data_msb_spi_sorted.csv  data_msb_spi_top100.csv  data_msb_top100.csv  data_rc_mag_top100.csv  data_rc_spi_top100.csv  data_rc_top100.csv  dynamo.py  dynamo_region.py  emission.py  exoplanet.eu_catalog.csv  magnetic_moment.py  magneticmoment.py  main.py  notebook_Bstar.ipynb  notebook_DynamoRegion.ipynb  (+21 more)
notebooks/: Mmag_vs_Mass.ipynb  Study_ReinChris.ipynb  notebook_Bstar.ipynb  notebook_DynamoRegion.ipynb  notebook_MagneticMoment.ipynb  notebook_Magnetospher.ipynb  notebook_PRE.ipynb  notebook_Rp.ipynb  notebook_Rstar.ipynb  notebook_SW.ipynb  notebook_dyn_Mmag.ipynb  notebook_luminosity.ipynb  output_analysis.ipynb  plots_article_aa.ipynb
src/palantir/: __init__.py  logger.py
src/palantir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/palantir/output_analysis/: __init__.py  data_manipulation.py
src/palantir/prediction_tools/: __init__.py  dynamo_region.py  emission.py  magnetic_moment.py  planet.py  star.py  stellar_wind.py  target_selection.py
src/palantir/scripts/: main.py
src/palantir/scripts/input_files/: Baraffe_no_irrad.csv  Bstar_catalog.csv  Burrows.csv  custom_dataset.csv  exoplanet.eu_catalog.csv  run_parameters.csv
tests/: test_emission.py  test_magnetic_moment.py  test_planet.py  test_star.py
